add own page for zksnark circuit editor, compiler, proof generator and verifier

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "iden3",
   "license": "GPL3",
   "dependencies": {
+    "codemirror": "^5.45.0",
     "http-server": "^0.11.1",
     "toastr": "^2.1.4"
   }
